package services;

import data.Appointment;

public final class AppointmentService extends Service<Appointment> {

}