@startuml

skinparam groupInheritance 2
page 2x2
skinparam pageMargin 10
skinparam pageExternalColor gray
skinparam pageBorderColor black
hide empty members

'skinparam genericDisplay old


package services {
    abstract class Service<T extends ServiceData> {
        # database: Map<String, T>
        # validateID(String)
        + add(String, T)
        + remove(String): T
        # update(String, T)
    }
    class ContactService<Contact> extends Service {
        + update(String, String, String, String, String)
        + update(String, Contact)
    }
    class TaskService<Task> extends Service {
        + update(String, String, String)
        + update(String, Task)
    }
    class AppointmentService<Appointment> extends Service {

    }
}

package data {
    abstract class ServiceData {
        # validateField(String, int)
    }
    class Contact extends ServiceData {
        - firstName: String
        - lastName: String
        - phone: String
        - address: String
        + Contact(String, String, String, String)
        + setFirstName(String)
        + setLastName(String)
        + setPhone(String)
        + setAddress(String)
    }
    class Task extends ServiceData {
        - taskName: String
        - taskDescription: String
        + Task(String, String)
        + setTaskName(String)
        + setTaskDescription(String)
    }
    class Appointment extends ServiceData {
        - appointmentDate: Date
        - appointmentDescription: String
        + Appointment(Date, String)
        + setAppointmentDate(Date)
        + setAppointmentDescription(String)
    }
}


package validations {
    class Validations {
        {static} + validateStringLengthIsInRange(String, int)
        {static} + validateStringLengthEquals(String, int)
        {static} + validateStringContainsAllDigits(String)
        {static} + validateObjectNotNull(Object)
    }
'    note left of Validations::validateObjectNotNull
'    "Test"
'    end note
}

class java.util.Date

services -- data: Association
ServiceData o--> validations: dependency
java.util.Date <-[dashed]- Appointment: dependency


@enduml